adding tabbed content + minor changes

--- a/app/views/listitem_widget/thumbnail.html.erb
+++ b/app/views/listitem_widget/thumbnail.html.erb
@@ -1,6 +1,6 @@
 <div class="editing-dialog-thumbnail">
   <div class="visualization">
-    <span class="icon editing-icon-text"></span>
+    <span class="icon editing-icon-list"></span>
   </div>
 
   <div class="title">
