New Styles, Tabbed content on Homepage

--- a/app/views/homepage/index.html
+++ b/app/views/homepage/index.html
@@ -1,1 +1,5 @@
-<%= cms_tag :div, @obj, :main_content %>
+<div class="bg_white">
+  <div class="container">
+    <%= cms_tag :div, @obj, :main_content %>
+  </div>
+</div>
