--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,5 +1,7 @@
-<div class="page-header">
-  <%= cms_tag :h1, @obj, :title %>
-</div>
-<%= render partial: 'cms/breadcrumbs' %>
-<%= cms_tag :div, @obj, :main_content %>
+<div class="container margin_top" id="#content">
+  <div class="page-header">
+    <%= cms_tag :h1, @obj, :title %>
+  </div>
+  <%= render partial: 'cms/breadcrumbs' %>
+  <%= cms_tag :div, @obj, :main_content %>
+</div><!-- /#content -->
