--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,3 +1,16 @@
+<% if @obj.teaser_headline.presence || @obj.teaser_content.presence || @in_edit_mode %>
+  <div class="bg_grey1">
+    <div id="#content" class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <%= cms_tag :h3, @obj, :teaser_headline %>
+          <%= cms_tag :p,  @obj, :teaser_content %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+
 <div class="container margin_top" id="#content">
   <div class="page-header">
     <%= cms_tag :h1, @obj, :title %>
