Using new SDK 0.18.1.311...!

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,5 +14,6 @@
  *= require application/foundation_icons_general
  *= require application/foundation_icons_social
  *= require application/app
+ *= require scrivito
  *= require scrivito_elastic_slider/application
  */
