--- a/app/views/homepage/index.html
+++ b/app/views/homepage/index.html
@@ -1,5 +1,5 @@
 <div class="bg_white">
   <div class="container">
-    <%= cms_tag :div, @obj, :main_content %>
+    <%= scrivito_tag :div, @obj, :content %>
   </div>
 </div>
