--- a/app/views/page/thumbnail.html.erb
+++ b/app/views/page/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-special"></span>
-  </div>
-
-  <div class="title">
-    Content
-  </div>
-
-  <div class="description">
-    Create an empty standard content page.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Page', :content do %>
+  A simple content page with a headline and content consisting of widgets.
+<% end %>
