--- a/app/views/text_widget/thumbnail.html.erb
+++ b/app/views/text_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-text"></span>
-  </div>
-
-  <div class="title">
-    Text
-  </div>
-
-  <div class="description">
-    Creates a simple widget with content.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Text Widget', :text do %>
+  A widget for text and HTML content.
+<% end %>
