--- a/app/views/cms/_header.html.erb
+++ b/app/views/cms/_header.html.erb
@@ -5,5 +5,5 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <%= link_to "ScrivUno", cms_path(@obj.homepage), class: "navbar-brand" %>
+  <%= link_to "ScrivUno", scrivito_path(@obj.homepage), class: "navbar-brand" %>
 </div>
