--- a/app/views/headline_widget/show.html.erb
+++ b/app/views/headline_widget/show.html.erb
@@ -1,3 +1,3 @@
 <div class="headline">
-  <%= cms_tag(:h3, widget, :headline, id: widget.anchor.presence) %>
+  <%= scrivito_tag :h3, widget, :headline %>
 </div>
