--- a/app/views/headline_widget/thumbnail.html.erb
+++ b/app/views/headline_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-headline"></span>
-  </div>
-
-  <div class="title">
-    Headline
-  </div>
-
-  <div class="description">
-    The headline widget displays a page heading and allows to set an anchor.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Headline Widget', :headline do %>
+  A headline widget.
+<% end %>
