--- a/app/views/image_widget/show.html.erb
+++ b/app/views/image_widget/show.html.erb
@@ -1,1 +1,1 @@
-<%= cms_image_tag(widget, :source, class: "img-responsive image-widget-#{widget.align}", data: { filter: 'images' }) %>
+<%= scrivito_image_tag(widget, :image, class: "img-responsive", data: { filter: 'images' }) %>
