--- a/app/views/image_widget/thumbnail.html.erb
+++ b/app/views/image_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-image"></span>
-  </div>
-
-  <div class="title">
-    Image
-  </div>
-
-  <div class="description">
-    Widget that holds an image.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Image Widget', :image do %>
+  A widget with an image.
+<% end %>
