--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <!-- javascript -->
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <%= scrivito_header_tags %>
+  <%= scrivito_head_tags %>
 
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -49,10 +49,10 @@
   <%= render 'cms/footer' %>
 
 
-<% if inplace_editing_allowed? %>
+<% if scrivito_user %>
   <%= javascript_include_tag 'editing' %>
   <%= stylesheet_link_tag 'editing' %>
 <% end %>
-<%= scrivito_after_content_tags %>
+<%= scrivito_body_tags %>
 </body>
 </html>
