--- a/app/views/listitem_widget/details.html.erb
+++ b/app/views/listitem_widget/details.html.erb
@@ -1,20 +1,20 @@
 <div class="details-view">
   <h4>Headline</h4>
-  <%= cms_tag(:p, widget, :headline) %>
+  <%= scrivito_tag(:p, widget, :headline) %>
 
   <h4>Headline Size</h4>
-  <%= cms_edit_enum(widget, :headline_level) %>
+  <%= scrivito_edit_enum(widget, :headline_level) %>
 
   <h4>Subline</h4>
-  <%= cms_tag(:p, widget, :subline) %>
+  <%= scrivito_tag(:p, widget, :subline) %>
 
   <h4>Text</h4>
-  <%= cms_tag(:p, widget, :content) %>
+  <%= scrivito_tag(:p, widget, :content) %>
 
   <h4>Image</h4>
-  <%= cms_edit_reference(widget, :image) %>
+  <%= scrivito_edit_reference(widget, :image) %>
 
   <h4>Link</h4>
-  <%= cms_edit_link(widget, :link) %>
+  <%= scrivito_edit_link(widget, :link) %>
 
 </div>
