--- a/app/views/page/details.html.erb
+++ b/app/views/page/details.html.erb
@@ -1,7 +1,4 @@
 <div class="details-view">
-  <h4>
-    Title
-  </h4>
-
-  <%= cms_tag(:div, @obj, :title) %>
+  <h4>Title</h4>
+  <%= scrivito_tag(:div, @obj, :title) %>
 </div>
