--- a/app/views/cms/_nav.html.erb
+++ b/app/views/cms/_nav.html.erb
@@ -1,30 +1,26 @@
 
-<% if false %>
-<!-- classic simple navi -->
-<%= scrivito_tag_list(:ul, @obj.homepage, :toclist, class: "nav navbar-nav", id: "main_nav") do |list, item| %>
-  <% list.tag(:li, id: "main_nav_page_#{item.id}", data: { path: item.path }) do %>
-    <%= link_to(cms_path(item)) do %>
-      <%= scrivito_field(item, :title) %>
-    <% end %>
-  <% end %>
-<% end %>
-<% end %>
-
 <nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
-  <ul class="nav navbar-nav">
-    <% @obj.homepage.toclist.select{|i| i.show_in_navigation?}.each do |item| %>
-      <li class="dropdown">
-        <a class="dropdown-toggle" href="<%= scrivito_path(item) %>"><%= scrivito_value item.title %><span class="caret"></span></a>
-        <ul role="menu" class="dropdown-menu">
-          <% item.toclist.select{|i| i.show_in_navigation?}.each do |subitem| %>
-            <li>
-              <%= link_to subitem.title, scrivito_path(subitem) %>
-            </li>
-          <% end %>
-        </ul>
-      </li>
-    <% end %>
-  </ul>
+
+  <%= scrivito_tag_list(:ul, @obj.homepage, :toclist, class: "nav navbar-nav") do |list, item| %>
+    <% if item.show_in_navigation? -%>
+      <%= list.tag(:li, data: {path: item.path}, class: "dropdown") do %>
+        <%= link_to(scrivito_path(item), class: "dropdown-toggle") do %>
+          <%= item.headline %>
+          <span class="caret"></span>
+        <% end %>
+        <%= scrivito_tag_list(:ul, item, :toclist, class: "dropdown-menu", role: "menu") do |list2, item2| %>
+          <% if item2.show_in_navigation? -%>
+            <%= list2.tag(:li, data: {path: item2.path}) do %>
+              <%= link_to(scrivito_path(item2)) do %>
+                <%= item2.headline %>
+              <% end -%>
+            <% end -%>
+          <% end -%>
+        <% end -%>
+      <% end -%>
+    <% end -%>
+  <% end -%>
+          
   <form class="navbar-form navbar-right">
     <input type="text" placeholder="Search..." class="form-control">
   </form>
