--- a/app/views/blog/_post_short.html.erb
+++ b/app/views/blog/_post_short.html.erb
@@ -2,7 +2,7 @@
   <div class="blog_heading">
     <img alt="Gravatar" class="blog_item_image" src="http://localhost:3000/assets/dummy/square_01.png">
     <div class="blog_heading_content">
-      <h4 class="h3"><a href="#<%= post_short.id %>"><span><%= post_short.headline %></span></a></h4>
+      <h4 class="h3"><a href="#<%= post_short.id %>"><span><%= post_short.title %></span></a></h4>
     </div>
   </div>
   <div class="blog_body">TODO: shorten text of widget ..For more than half a year now, the content of this website is
