--- a/app/views/cms/_header_image.html.erb
+++ b/app/views/cms/_header_image.html.erb
@@ -4,7 +4,7 @@
   <div class="teaser small">
     <img src="http://localhost:3000/assets/dummy/teaser_06.jpg" alt="">
     <div class="container">
-      <h1 class="h1"><i class="foundicon-globe2"></i><%= @obj.headline %></h1>
+      <h1 class="h1"><i class="foundicon-globe2"></i><%= @obj.title %></h1>
     </div>
   </div>
 <% end %>
