--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8" />
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge" /><![endif]-->
-  <title>ScrivUno</title>
+  <title>ScrivUno - <%= strip_tags(@obj.title) %> </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
   <link rel="apple-touch-icon-precomposed" href="<%= asset_path('apple-touch-icon-precomposed') %>">
