--- a/app/views/homepage/details.html.erb
+++ b/app/views/homepage/details.html.erb
@@ -1,4 +1,4 @@
 <div class="details-view">
   <h4>Title</h4>
-  <%= scrivito_tag(:div, @obj, :title) %>
+  <%= scrivito_tag(:span, @obj, :title) %>
 </div>
