--- a/app/views/page/details.html.erb
+++ b/app/views/page/details.html.erb
@@ -1,4 +1,7 @@
 <div class="details-view">
   <h4>Title</h4>
-  <%= scrivito_tag(:div, @obj, :title) %>
+  <%= scrivito_tag(:span, @obj, :title) %>
+  <h4>Show in Navigation?</h4>
+  TODO: scrivito_edit_enum seems to not exist.
+  <%#= scrivito_edit_enum(@obj, :show_in_navigation) %>
 </div>
