--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
 
       <div class="col-md-9">
-        <%= render partial: 'cms/breadcrumbs' %>
+        <%= render partial: 'shared/breadcrumbs' %>
         <%= scrivito_tag :div, @obj, :content if @in_edit_mode || @obj.content.presence %>
         <%= render partial: 'blog/post', collection: @blogposts %>
       </div>
