--- a/app/views/shared/_other_content.html.erb
+++ b/app/views/shared/_other_content.html.erb
@@ -1,3 +1,3 @@
-<% if @obj.has_other_content? || @in_edit_mode %>
+<% if @obj.has_other_content? || scrivito_in_editable_view? %>
   <%= scrivito_tag :div, @obj, :other_content %>
 <% end %>
